--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -114,7 +114,7 @@ We clear any work-reports which we judged as uncertain or invalid from their cor
 \begin{equation}\label{eq:removenonpositive}
   \forall c \in \coreindex : \reportspostjudgement\subb{c} = \begin{cases}
     \none &\!\!\!\!\when
-      \tup{\blake(\reports\subb{c}_\rs¬workreport), \vs¬approval} \in \verdicts,
+      \tup{\blake{\reports\subb{c}_\rs¬workreport}, \vs¬approval} \in \verdicts,
       \vs¬approval < \floor{\twothirds\valcount} \\
     \reports\subb{c} &\!\!\!\!\otherwise
   \end{cases}\!\!\!\!\!\!\!
