--- a/text/notation.tex
+++ b/text/notation.tex
@@ -6,7 +6,7 @@ Much as in the Ethereum Yellow Paper, a number of notational conventions are use
 
 We use a number of different typefaces to denote different kinds of terms. Where a term is used to refer to a value only relevant within some localized section of the document, we use a lower-case roman letter \eg $x$, $y$ (typically used for an item of a set or sequence) or \eg $i$, $j$ (typically used for numerical indices). Where we refer to a Boolean term or a function in a local context, we tend to use a capitalized roman alphabet letter such as $A$, $F$. If particular emphasis is needed on the fact a term is sophisticated or multidimensional, then we may use a bold typeface, especially in the case of sequences and sets.
 
-For items which retain their definition throughout the present work, we use other typographic conventions. Sets are usually referred to with a blackboard typeface, \eg $\N$ refers to all natural numbers including zero. Sets which may be parameterized may be subscripted or be followed by parenthesized arguments. Imported functions, used by the present work but not specifically introduced by it, are written in calligraphic typeface, \eg $\blake$ the Blake2 cryptographic hashing function. For other non-context dependent functions introduced in the present work, we use upper case Greek letters, \eg $\transitionstate$ denotes the state transition function.
+For items which retain their definition throughout the present work, we use other typographic conventions. Sets are usually referred to with a blackboard typeface, \eg $\N$ refers to all natural numbers including zero. Sets which may be parameterized may be subscripted or be followed by parenthesized arguments. Imported functions, used by the present work but not specifically introduced by it, are written in calligraphic typeface, \eg $\fnblake$ the Blake2 cryptographic hashing function. For other non-context dependent functions introduced in the present work, we use upper case Greek letters, \eg $\transitionstate$ denotes the state transition function.
 
 Values which are not fixed but nonetheless hold some consistent meaning throughout the present work are denoted with lower case Greek letters such as $\thestate$, the state identifier. These may be placed in bold typeface to denote that they refer to an abnormally complex value.
 
@@ -146,15 +146,15 @@ $\blob$ denotes the set of octet strings (``blobs'') of arbitrary length. As mig
 
 \subsubsection{Shuffling}
 
-We define the sequence-shuffle function $\fyshuffle$, originally introduced by \cite{fisheryates1938statistical}, with an efficient in-place algorithm described by \cite{wikipedia2024fisheryates}. This accepts a sequence and some entropy and returns a sequence of the same length with the same elements but in an order determined by the entropy. The entropy may be provided as either an indefinite sequence of naturals or a hash. For a full definition see appendix \ref{sec:shuffle}.
+We define the sequence-shuffle function $\fnfyshuffle$, originally introduced by \cite{fisheryates1938statistical}, with an efficient in-place algorithm described by \cite{wikipedia2024fisheryates}. This accepts a sequence and some entropy and returns a sequence of the same length with the same elements but in an order determined by the entropy. The entropy may be provided as either an indefinite sequence of naturals or a hash. For a full definition see appendix \ref{sec:shuffle}.
 
 \subsection{Cryptography}\label{sec:cryptography}
 
 \subsubsection{Hashing}
 
-$\hash$ denotes the set of 256-bit values typically expected to be arrived at through a cryptographic function, equivalent to $\bloboflen{32}$, with $\zerohash$ being equal to $[0]_{32}$. We assume a function $\blake(m \in \blob) \in \hash$ denoting the Blake2b 256-bit hash introduced by \cite{rfc7693} and a function $\keccak(m \in \blob) \in \hash$ denoting the Keccak 256-bit hash as proposed by \cite{bertoni2013keccak} and utilized by \cite{wood2014ethereum}.
+$\hash$ denotes the set of 256-bit values typically expected to be arrived at through a cryptographic function, equivalent to $\bloboflen{32}$, with $\zerohash$ being equal to $[0]_{32}$. We assume a function $\blake{m \in \blob} \in \hash$ denoting the Blake2b 256-bit hash introduced by \cite{rfc7693} and a function $\keccak{m \in \blob} \in \hash$ denoting the Keccak 256-bit hash as proposed by \cite{bertoni2013keccak} and utilized by \cite{wood2014ethereum}.
 
-We may sometimes wish to take only the first $x$ octets of a hash, in which case we denote $\blakeprefix{x}(m) \in \bloboflen{x}$ to be the first $x$ octets of $\blake(m)$. The inputs of a hash function should be expected to be passed through our serialization codec $\mathcal{E}$ to yield an octet sequence to which the cryptography may be applied. (Note that an octet sequence conveniently yields an identity transform.) We may wish to interpret a sequence of octets as some other kind of value with the assumed decoder function $\decode{x \in \blob}$. In both cases, we may subscript the transformation function with the number of octets we expect the octet sequence term to have. Thus, $r = \mathcal{E}_4(x \in \N)$ would assert $x \in \Nbits{32}$ and $r \in \bloboflen{4}$, whereas $s = \decode{8}{y}$ would assert $y \in \bloboflen{8}$ and $s \in \Nbits{64}$.
+We may sometimes wish to take only the first $x$ octets of a hash, in which case we denote $\blakeprefix{x}{m} \in \bloboflen{x}$ to be the first $x$ octets of $\blake{m}$. The inputs of a hash function should be expected to be passed through our serialization codec $\mathcal{E}$ to yield an octet sequence to which the cryptography may be applied. (Note that an octet sequence conveniently yields an identity transform.) We may wish to interpret a sequence of octets as some other kind of value with the assumed decoder function $\decode{x \in \blob}$. In both cases, we may subscript the transformation function with the number of octets we expect the octet sequence term to have. Thus, $r = \mathcal{E}_4(x \in \N)$ would assert $x \in \Nbits{32}$ and $r \in \bloboflen{4}$, whereas $s = \decode{8}{y}$ would assert $y \in \bloboflen{8}$ and $s \in \Nbits{64}$.
 
 \subsubsection{Signing Schemes}\label{sec:signing}
 
@@ -164,7 +164,7 @@ We use $\blskey \subset \bloboflen{144}$ to denote the set of public keys for th
 
 We denote the set of valid Bandersnatch public keys as $\bskey$, defined in appendix \ref{sec:bandersnatch}. $\bandersig{k \in \bskey}{x \in \blob}{m \in \blob} \subset \bloboflen{96}$ is the set of valid singly-contextualized signatures of utilizing the secret counterpart to the public key $k$, some context $x$ and message $m$.
 
-$\bandersnatch{r \in \ringroot}{x \in \blob}{m \in \blob} \subset \bloboflen{784}$, meanwhile, is the set of valid Bandersnatch Ring\textsc{vrf} deterministic singly-contextualized proofs of knowledge of a secret within some set of secrets identified by some root in the set of valid \emph{roots} $\ringroot \subset \bloboflen{144}$. We denote $\getringroot(\mathbf{s} \in \sequence{\bskey}) \in \ringroot$ to be the root specific to the set of public key counterparts $\mathbf{s}$. A root implies a specific set of Bandersnatch key pairs, knowledge of one of the secrets would imply being capable of making a unique, valid---and anonymous---proof of knowledge of a unique secret within the set.
+$\bandersnatch{r \in \ringroot}{x \in \blob}{m \in \blob} \subset \bloboflen{784}$, meanwhile, is the set of valid Bandersnatch Ring\textsc{vrf} deterministic singly-contextualized proofs of knowledge of a secret within some set of secrets identified by some root in the set of valid \emph{roots} $\ringroot \subset \bloboflen{144}$. We denote $\getringroot{\mathbf{s} \in \sequence{\bskey}} \in \ringroot$ to be the root specific to the set of public key counterparts $\mathbf{s}$. A root implies a specific set of Bandersnatch key pairs, knowledge of one of the secrets would imply being capable of making a unique, valid---and anonymous---proof of knowledge of a unique secret within the set.
 
 Both the Bandersnatch signature and Ring\textsc{vrf} proof strictly imply that a member utilized their secret key in combination with both the context $x$ and the message $m$; the difference is that the member is identified in the former and is anonymous in the latter. Furthermore, both define a \textsc{vrf} \emph{output}, a high entropy hash influenced by $x$ but not by $m$, formally denoted $\Fbanderout{\bandersnatch{r}{x}{m}} \subset \hash$ and $\Fbanderout{\bandersig{k}{x}{m}} \subset \hash$.
 
