--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -14,9 +14,9 @@
 \newcommand*{\continue}{\blacktriangleright}
 \newcommand*{\gascost}{\gascounter_\Delta}
 \newcommand*{\instrlen}{\ell}
-\newcommand*{\revbitsfunc}[1]{\overleftarrow{\octetstobits}_{#1}}
+\newcommand*{\revbitsfunc}[1]{\overleftarrow{\fnoctetstobits}_{#1}}
 \newcommand*{\revunbitsfunc}[1]{\revbitsfunc{#1}^{-1}}
-\newcommand*{\bitsfunc}[1]{\octetstobits_{#1}}
+\newcommand*{\bitsfunc}[1]{\fnoctetstobits_{#1}}
 \newcommand*{\unbitsfunc}[1]{\bitsfunc{#1}^{-1}}
 \newcommand*{\bits}[1]{\bitsn{8}{#1}}
 \newcommand*{\unbits}[1]{\unbitsn{8}{#1}}
