--- a/text/utilities.tex
+++ b/text/utilities.tex
@@ -2,29 +2,29 @@
 
 The Fisher-Yates shuffle function is defined formally as:
 \begin{equation}\label{eq:suffle}
-  \forall T, l \in \N: \fyshuffle\colon\abracegroup{
+  \forall T, l \in \N: \fnfyshuffle\colon\abracegroup{
     \tuple{\sequence{T}\sub{l}, \sequence{\N}\sub{l:}} &\to \sequence{T}\sub{l}\\
     \tup{\mathbf{s}, \mathbf{r}} &\mapsto \begin{cases}
-      \sq{\mathbf{s}_{\mathbf{r}_0 \bmod l}} \concat \Ffyshuffle{\mathbf{s}'\sub{\dots l-1}, \mathbf{r}\sub{1\dots}}\ \where \mathbf{s}' = \mathbf{s} \exc \mathbf{s'}\sub{\mathbf{r}_0 \bmod l} = \mathbf{s}\sub{l - 1} &\when \mathbf{s} \ne \sq{}\\
+      \sq{\mathbf{s}_{\mathbf{r}_0 \bmod l}} \concat \fyshuffle{\mathbf{s}'\sub{\dots l-1}, \mathbf{r}\sub{1\dots}}\ \where \mathbf{s}' = \mathbf{s} \exc \mathbf{s'}\sub{\mathbf{r}_0 \bmod l} = \mathbf{s}\sub{l - 1} &\when \mathbf{s} \ne \sq{}\\
       \sq{} &\otherwise
     \end{cases}
   }
 \end{equation}
 
-Since it is often useful to shuffle a sequence based on some random seed in the form of a hash, we provide a secondary form of the shuffle function $\fyshuffle$ which accepts a 32-byte hash instead of the numeric sequence. We define $\seqfromhash$, the numeric-sequence-from-hash function, thus:
+Since it is often useful to shuffle a sequence based on some random seed in the form of a hash, we provide a secondary form of the shuffle function $\fnfyshuffle$ which accepts a 32-byte hash instead of the numeric sequence. We define $\seqfromhash$, the numeric-sequence-from-hash function, thus:
 \begin{align}
   \forall l \in \N:\ \seqfromhash\sub{l}&\colon\abracegroup{
     \hash &\to \sequence{\Nbits{32}}\sub{l}\\
     h &\mapsto \sq{\build{
-      \fixeddecode{4}{\blake(h \concat \fixedencode{4}{\floor{\nicefrac{i}{8}}})
+      \fixeddecode{4}{\blake{h \concat \fixedencode{4}{\floor{\nicefrac{i}{8}}}}
       \sub{4i \bmod 32 \dots+4}}
     }{
       i \orderedin \N\sub{l}
     }}
   }\\
   \label{eq:sequencefromhash}
-  \forall T, l \in \N:\ \fyshuffle&\colon\abracegroup{
+  \forall T, l \in \N:\ \fnfyshuffle&\colon\abracegroup{
     \tuple{\sequence{T}\sub{l}, \hash} &\to \sequence{T}\sub{l}\\
-    \tup{\mathbf{s}, h} &\mapsto \Ffyshuffle{\mathbf{s}, \seqfromhash\sub{l}(h)}
+    \tup{\mathbf{s}, h} &\mapsto \fyshuffle{\mathbf{s}, \seqfromhash\sub{l}(h)}
   }
 \end{align}
