--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -82,7 +82,7 @@ Restated, we must be able to define some \emph{historical} lookup function $\his
 \begin{aligned}
   \histlookup\colon \abracegroup[\ ]{
     \tuple{\serviceaccount, \Nmax{\H_\¬timeslot - \mathsf{D} \dots \H_\¬timeslot}, \hash} &\to \optional{\blob} \\
-    (\mathbf{a}, t, \blake(\mathbf{p})) &\mapsto v : v \in \set{ \mathbf{p}, \none }
+    (\mathbf{a}, t, \blake{\mathbf{p}}) &\mapsto v : v \in \set{ \mathbf{p}, \none }
   }
 \end{aligned}
 \end{equation}
@@ -96,7 +96,7 @@ The preimage lookup for some service of index $s$ is denoted $\accounts\subb{s}_
 The state of the lookup system naturally satisfies a number of invariants. Firstly, any preimage value must correspond to its hash, equation \ref{eq:preimageconstraints}. Secondly, a preimage value being in state implies that its hash and length pair has some associated status, also in equation \ref{eq:preimageconstraints}. Formally:
 \begin{equation}\label{eq:preimageconstraints}
   \forall \mathbf{a} \in \serviceaccount, \kv{h}{\mathbf{d}} \in \mathbf{a}_\sa¬preimages \Rightarrow
-    h = \blake(\mathbf{d})\wedge
+    h = \blake{\mathbf{d}}\wedge
     \tup{h , \len{\mathbf{d}}} \in \keys{\mathbf{a}_\sa¬requests}
 \end{equation}
 
