--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -20,11 +20,11 @@ During the accumulation stage, a value with the partial transition of this state
   \recenthistorypostparentstaterootupdate \equiv \recenthistory\quad\exc\quad\recenthistorypostparentstaterootupdate\subb{\len{\recenthistory} - 1}_\rh¬stateroot = \H_\¬priorstateroot
 \end{equation}
 
-We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\merklizewb$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function (defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
+We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\fnmerklizewb$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function (defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
 \begin{align}
   \using \mathbf{s} &= \sq{\fixedencode{4}{s} \concat \encode{h} \mid \tup{s, h} \orderedin \lastaccout'}\\
   \label{eq:buildbeefymap}
-  \beefybelt' &\equiv \Fmmrappend{\beefybelt, \merklizewb{\mathbf{s}, \keccak}, \keccak}
+  \beefybelt' &\equiv \mmrappend{\beefybelt, \merklizewb{\mathbf{s}, \fnkeccak}, \fnkeccak}
 \end{align}
 
 The final state transition for $\recenthistory$ appends a new item including the new block's header hash, a Merkle commitment to the block's Accumulation Output Log and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Formally:
@@ -32,9 +32,9 @@ The final state transition for $\recenthistory$ appends a new item including the
   \begin{aligned}
     \recenthistory' &\equiv {\overleftarrow{\recenthistorypostparentstaterootupdate \append \tup{
       \rh¬reportedpackagehashes,
-      \is{\rh¬headerhash}{\blake(\theheader)},
+      \is{\rh¬headerhash}{\blake{\theheader}},
       \is{\rh¬stateroot}{\zerohash},
-      \is{\rh¬accoutlogsuperpeak}{\mmrsuperpeak(\beefybelt')}
+      \is{\rh¬accoutlogsuperpeak}{\mmrsuperpeak{\beefybelt'}}
       }}}^\mathsf{H} \\
     \where \rh¬reportedpackagehashes &= \set{\build{
         \kv{
