--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -132,7 +132,7 @@ Given the result $\wd¬result$ and gas used $\wd¬gasused$ of some work-item, we
     }, \wd¬result, \wd¬gasused} &\mapsto \tup{\begin{aligned}
       &\wd¬service,\,
       \wd¬codehash,\,
-      \is{\wd¬payloadhash}{\blake(\¬payload)},\,
+      \is{\wd¬payloadhash}{\blake{\¬payload}},\,
       \is{\wd¬gaslimit}{\wi¬accgaslimit},\,
       \wd¬result,\,
       \wd¬gasused,\\
@@ -147,7 +147,7 @@ Given the result $\wd¬result$ and gas used $\wd¬gasused$ of some work-item, we
 We define the work-package's implied authorizer as $\wpX_\wp¬authorizer$, the hash of the authorization code hash concatenated with the configuration. We define the authorization code as $\wpX_\wp¬authcode$ and require that it be available at the time of the lookup anchor block from the historical lookup of service $\wpX_\wp¬authcodehost$. Formally:
 \begin{equation}
   \forall \wpX \in \workpackage: \abracegroup[\,]{
-    \wpX_\wp¬authorizer &\equiv \blake(\wpX_\wp¬authcodehash \concat \wpX_\wp¬authconfig) \\
+    \wpX_\wp¬authorizer &\equiv \blake{\wpX_\wp¬authcodehash \concat \wpX_\wp¬authconfig} \\
     \encode{\var{\wpX_\wp¬metadata}, \wpX_\wp¬authcode} &\equiv \histlookup(\accounts[\wpX_\wp¬authcodehost], (\wpX_\wp¬context)_\wc¬lookupanchortime, \wpX_\wp¬authcodehash) \\
     \tup{\wpX_\wp¬metadata, \wpX_\wp¬authcode} &\in \tuple{\blob, \blob}
   }
@@ -165,10 +165,10 @@ We define the paged-proofs function $\pagedproofs$ which accepts a series of exp
   \!\!\pagedproofs\colon\abracegroup{
     \sequence{\segment} \to \,&\sequence{\segment} \\
     \mathbf{s} \mapsto \,&\sq{
-      \zeropad\sub{l}(\encode{
-        \var{\merklejustsubpath_6(\mathbf{s}, i)},
-        \var{\merklesubtreepage_6(\mathbf{s}, i)}
-      })
+      \zeropad{l}{\encode{
+        \var{\fnmerklejustsubpath{6}{\mathbf{s}, i}},
+        \var{\fnmerklesubtreepage{6}{\mathbf{s}, i}}
+      }}
       \mid i \orderedin \Nmax{\ceil{\nicefrac{\len{\mathbf{s}}}{64}}}
     } \\
     & \where l = \mathsf{W}_G
@@ -208,7 +208,7 @@ Where:
     \multicolumn{2}{l}{\where \tup{r, \mathbf{e}, u} = \Psi_R(
       j, \wpX, \mathbf{o}, \sq{\build{\importsegmentdata(w)}{w \orderedin \wpX_\wp¬workitems}}, \ell
     )}\\
-    \multicolumn{2}{l}{\also h = \blake(\wpX)\,,\; \local¬theitem = \wpX_\wp¬workitems\subb{j}\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems\subb{k}_\wi¬exportcount}\\
+    \multicolumn{2}{l}{\also h = \blake{\wpX}\,,\; \local¬theitem = \wpX_\wp¬workitems\subb{j}\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems\subb{k}_\wi¬exportcount}\\
     \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, \tup{r \in \blob, \dots} = I(p, k)} \len{r}}
   \end{cases}
 \end{align*}
@@ -227,7 +227,7 @@ We immediately define the segment-root lookup function $\segrootlookup$, depende
 
 In order to expect to be compensated for a work-report they are building, guarantors must compose a value for $\wr¬srlookup$ to ensure not only the above but also a further constraint that all pairs of work-package hashes and segment-roots do properly correspond:
 \begin{equation}
-  \forall (h \mapsto e) \in \wr¬srlookup : \exists \wpX, \¬core \in \workpackage, \coreindex : \blake(\wpX) = h \wedge (\computereport(\wpX, \¬core)_\wr¬avspec)_\as¬segroot = e\!\!\!\!
+  \forall (h \mapsto e) \in \wr¬srlookup : \exists \wpX, \¬core \in \workpackage, \coreindex : \blake{\wpX} = h \wedge (\computereport(\wpX, \¬core)_\wr¬avspec)_\as¬segroot = e\!\!\!\!
 \end{equation}
 
 As long as the guarantor is unable to satisfy the above constraints, then it should consider the work-package unable to be guaranteed. Auditors are not expected to populate this but rather to reuse the value in the work-report they are auditing.
@@ -237,16 +237,16 @@ The next term to be introduced, $\tup{\wr¬authtrace, \wr¬authgasused}$, is the
 The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $\wiX$. We also define $\justifysegmentdata$, which compiles justifications of segment data:
 \begin{equation}
   \begin{aligned}
-    \extrinsicdata(\wiX \in \workitem) &\equiv \sq{\build{\mathbf{d}}{(\blake(\mathbf{d}), \len{\mathbf{d}}) \orderedin \wiX_\wi¬extrinsics}} \\
-    \importsegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\segsX[n]}{\merklizecd(\segsX) = \segrootlookup(r), \tup{r, n} \orderedin \wiX_\wi¬importsegments}} \\
-    \justifysegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\var{\merklejustsubpath_0(\segsX, n)}}{\merklizecd(\segsX) = \segrootlookup(r), \tup{r, n} \orderedin \wiX_\wi¬importsegments}}
+    \extrinsicdata(\wiX \in \workitem) &\equiv \sq{\build{\mathbf{d}}{(\blake{\mathbf{d}}, \len{\mathbf{d}}) \orderedin \wiX_\wi¬extrinsics}} \\
+    \importsegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\segsX[n]}{\merklizecd{\segsX} = \segrootlookup(r), \tup{r, n} \orderedin \wiX_\wi¬importsegments}} \\
+    \justifysegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\var{\fnmerklejustsubpath{0}{\segsX, n}}}{\merklizecd{\segsX} = \segrootlookup(r), \tup{r, n} \orderedin \wiX_\wi¬importsegments}}
   \end{aligned}
 \end{equation}
 
 We may then define $\wr¬avspec$ as the data availability specification of the package using these three functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
 \begin{equation}
   \wr¬avspec = \newavailabilityspecifier(
-    \blake(\wpX),
+    \blake{\wpX},
     \encode{
       \wpX,
       \extrinsicdata^\#(\wpX_\wp¬workitems),
@@ -278,26 +278,26 @@ We define the availability specifier function $\newavailabilityspecifier$, which
       h,\,
       \is{l}{\len{\mathbf{b}}},\,
       u,\,
-      \is{e}{\merklizecd(\mathbf{s})},\,
+      \is{e}{\merklizecd{\mathbf{s}}},\,
       \is{n}{\len{\mathbf{s}}}
     }
   }\!\!\!\!\!
 \end{equation}
 \begin{align*}
-  \where u &= \merklizewb(
-    [\concatall{\mathbf{x}} \mid \mathbf{x} \orderedin \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
-  )\\
-  \also \mathbf{b}^\clubsuit &= \blake^\#(\Ferasurecode[\ceil{\nicefrac{\len{\mathbf{b}}}{\mathsf{W}_E}}]{\zeropad_{\mathsf{W}_E}(\mathbf{b})})\\
-  \also \mathbf{s}^\clubsuit &= \merklizewb^\#(\transpose\Ferasurecodeplex[6]{\mathbf{s} \concat \pagedproofs(\mathbf{s})})
+  \where u &= \merklizewb{
+    \sq{\build{\concatall{\mathbf{x}}}{\mathbf{x} \orderedin \transpose\sq{\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit}}}
+  }\\
+  \also \mathbf{b}^\clubsuit &= \blakemany{\erasurecode[\ceil{\nicefrac{\len{\mathbf{b}}}{\mathsf{W}_E}}]{\zeropad{\mathsf{W}_E}{\mathbf{b}}}}\\
+  \also \mathbf{s}^\clubsuit &= \merklizewbmany{\transpose\erasurecodeplex[6]{\mathbf{s} \concat \pagedproofs(\mathbf{s})}}
 \end{align*}
 
 The paged-proofs function $\pagedproofs$, defined earlier in equation \ref{eq:pagedproofs}, accepts a sequence of segments and returns a sequence of paged-proofs sufficient to justify the correctness of every segment. There are exactly $\ceil{\nicefrac{1}{64}}$ paged-proof segments as the number of yielded segments, each composed of a page of 64 hashes of segments, together with a Merkle proof from the root to the subtree-root which includes those 64 segments.
 
-The functions $\merklizecd$ and $\merklizewb$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\erasurecode$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
+The functions $\fnmerklizecd$ and $\fnmerklizewb$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\fnerasurecode$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
 
-And $\zeropad$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
+And $\fnzeropad{}$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
 \begin{equation}\label{eq:zeropadding}
-  \zeropad_{n \in \Nclamp{1}{}}\colon\abracegroup{
+  \fnzeropad{n \in \Nclamp{1}{}}\colon\abracegroup{
     \blob &\to \bloboflen{k \cdot n}\\
     \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((\len{x} + n - 1) \bmod n) + 1 \dots n}
   }
