--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -299,7 +299,7 @@ And $\fnzeropad{}$ is the zero-padding function to take an octet array to some m
 \begin{equation}\label{eq:zeropadding}
   \fnzeropad{n \in \Nclamp{1}{}}\colon\abracegroup{
     \blob &\to \bloboflen{k \cdot n}\\
-    \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((\len{x} + n - 1) \bmod n) + 1 \dots n}
+    \mathbf{x} &\mapsto \mathbf{x} \concat \sq{0, 0, \dots}\interval{((\len{x} + n - 1) \bmod n) + 1}{n}
   }
 \end{equation}
 
